<resources>
    <string name="app_name">MyFakeStore</string>
    <string name="imagen_del_articulo">Article Image</string>
    <string name="textview">textview</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="ir_a_la_shoppingcart">Go to shopping cart</string>
    <string name="search_by_category">Search by category</string>
    <string name="imagen_del_item">Imagen del item</string>
    <string name="boton_eliminar">boton eliminar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tituloaplicacion">MyFakeStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="register">Register</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="checkout">Checkout</string>

</resources>