<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="4dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/ivArticleImage"
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/imagen_del_articulo"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/titletv"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.287"
                app:layout_constraintStart_toEndOf="@+id/ivArticleImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/categorytv"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="72dp"
                android:text="@string/textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toEndOf="@+id/ivArticleImage"
                app:layout_constraintTop_toBottomOf="@+id/titletv" />

            <TextView
                android:id="@+id/pricetv"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="12dp"
                android:text="@string/textview"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivArticleImage"
                app:layout_constraintTop_toBottomOf="@+id/categorytv"
                app:layout_constraintVertical_bias="0.6" />

            <Button
                android:id="@+id/addtocartbt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_to_cart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.719"
                app:layout_constraintStart_toEndOf="@+id/pricetv"
                app:layout_constraintTop_toBottomOf="@+id/categorytv" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>